# strava-offline

./: .cookiecutter.json  .gitignore  .gitmodules  .mypy.ini  .private.sh.sample  CONTRIBUTING.md  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  _help.mk  dev-requirements.txt  install-requirements.txt  pyproject.toml  setup-requirements.txt  setup.cfg  setup.py  strava-offline.sh  yearly_summary.sql.m4
.github/: dependabot.yml
.github/workflows/: check-distro.yaml  check.yaml  lint.yaml  pypi.yaml
.readme.md/: config-sample.md  help-report.md  help.md
.venv-wheel/: pyvenv.cfg
src/strava_offline/: __init__.py  __main__.py  auth.py  cli.py  config.py  config_file.py  gpx.py  redirect_server.py  reports.py  sqlite.py  strava.py  sync.py
tests/: .xdg-user.sh  conftest.py  cram-noescape.py  fixme.md  include-preproc.py  include.py  prysk-noescape.py  test_fixme.py  test_gpx.py  test_sqlite.py  test_strava_oauth.py
tests/cassettes/test_gpx/: test_download_gpx.yaml
tests/cassettes/test_sqlite/: test_migration_activities.yaml  test_migration_bikes.yaml  test_sync_activities.yaml  test_sync_bikes.yaml
tests/cassettes/test_strava_oauth/: test_fetch_token.yaml
tests/readme/: config-sample.md  help-gpx.md  help-sqlite.md  help.md  make-help.md
