[build-system]
requires = [
    "setuptools >= 77.0.3",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "strava-offline"
description = "FIXME"
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = "MIT"
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
classifiers = [ # https://pypi.org/classifiers/
    # FIXME: "Development Status :: …",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # FIXME: "Topic :: …",
]
requires-python = ">= 3.10"
dependencies = [
    "PyYAML",
    "click ~= 8.0",
    "click-config-file",
    "platformdirs >= 2.1",
]

[dependency-groups]
dev = [
    "flake8",
    "isort >= 5.0",
    "mypy >= 0.900",
    "prysk >= 0.20.0",
    "pytest",
    "types-PyYAML",
]

[project.urls]
"Homepage" = "https://github.com/liskin/strava-offline"
"Release Notes" = "https://github.com/liskin/strava-offline/releases"
"Issues" = "https://github.com/liskin/strava-offline/issues"
"CI" = "https://github.com/liskin/strava-offline/actions"
"Donations (GitHub)" = "https://github.com/sponsors/liskin"
"Donations (PayPal)" = "https://www.paypal.me/lisknisi/10EUR"

[project.scripts]
strava-offline = "strava_offline.cli:cli"

[tool.gha-check-distro]
dependencies-apt = [
    "jq",
    "make",
    "python3-click",
    "python3-configobj",
    "python3-flake8",
    "python3-isort",
    "python3-mypy",
    "python3-pip",
    "python3-platformdirs",
    "python3-pytest",
    "python3-typeshed",
    "python3-venv",
    "python3-yaml",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

[tool.ruff]
line-length = 120

# vim:set et:
