[metadata]
name = strava_offline
url = https://github.com/liskin/strava-offline

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "Leep a local mirror of Strava activities for further analysis/processing"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7
install_requires =
    bottle
    pytz
    requests
    requests_oauthlib
tests_require =

[options.extras_require]
dev =
    flake8
    mypy
    pep517
    python-language-server
    twine
test =

[options.packages.find]
where=src

[options.package_data]
* =
    py.typed

[options.entry_points]
console_scripts =
    strava-offline = strava_offline.cli:main

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120

# vim:set et:
