[metadata]
name = strava-offline
url = https://github.com/liskin/strava-offline

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "Leep a local mirror of Strava activities for further analysis/processing"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7
install_requires =
    PyYAML
    bottle
    click ~= 8.0
    click-config-file
    click-option-group
    platformdirs >= 2.1
    requests
    requests_oauthlib
    tabulate
    typing-extensions  # python 3.7 compat
tests_require =

[options.extras_require]
dev =
    build >= 0.7
    cram
    flake8
    isort >= 5.0
    mypy >= 0.730
    pyflakes >= 2.2.0
    twine
    types-PyYAML
    types-click
    types-requests
    types-setuptools
    types-tabulate
test =
    pytest
    pytest-recording
    vcrpy >= 2.1.0

[options.packages.find]
where=src

[options.package_data]
* =
    py.typed

[options.entry_points]
console_scripts =
    strava-offline = strava_offline.cli:cli

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120

# vim:set et:
